k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw2
  labels:
    app.kubernetes.io/name: hw2
